# dice_algebra_calculator_c

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  meson.build
include/: global_error.h  tokenize.h
src/: dice_error.c  dice_error.h  executor.c  executor.h  global_error.c  global_error.h  lexer.c  lexer.h  main.c  meson.build  parser.c  parser.h  tokenize.c  tokenize.h
